syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.grunicke.lighter";

package LighterGRPC;

service Lighter {
    rpc setColor(ColorMessage) returns (Confirmation) {};
    rpc checkConnection(InitMessage) returns (stream ColorMessage) {};
    rpc switchState(StateMessage) returns (Confirmation) {};
}

message ColorMessage {
    bool onstate = 1;
    int32 r = 2;
    int32 g = 3;
    int32 b = 4;
    int32 opacity = 5;
    string deviceID = 6;
    string password = 7;
}


message StateMessage {
    bool onstate = 1;
    string deviceID = 2;
    string password = 3;
}

message Confirmation {
    bool success = 1;
}

message InitMessage {
    string deviceID = 1;
    string password = 2;
}
